--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
 <html>
+<style>
+@font-face {
+  src:url(SharpSansDispNo1-Medium.ttf);
+  font-family: nos;
+}
+body{
+  text-align: center;
+  background-color: #77BFFD;
+  font-family: nos;
+}
+h1{
+  font-size: 40px;
+}
+</style>
   <head>
   </head>
   <body>
     <h1>Sally Soto</h1>
+    <h2>Exercise 1: A Little Background</h2>
+      <a href="https://xd.adobe.com/view/cde37e94-f3de-4aa1-9938-a75b33bf4938-98b0/">E1</a>
+    <h2>P1.1 Checkpoint</h2>
+      <a href ="p1-1.html">P1.1</a>
   </body>
 </html>
