--- a/p1/1/index.html
+++ b/p1/1/index.html
@@ -1,32 +1,9 @@
 <!DOCTYPE html>
 <html>
-<style>
-@font-face {
-  src:url(SharpSansDispNo1-Medium.ttf);
-  font-family: nos;
-}
-body{
-  text-align: center;
-  background-color: #EF8F35;
-  text-decoration-color: white;
-}
-h1{
-   font-size: 45px;
-   font-family: nos;
-   text-decoration: underline;
-}
-h2{
-  font-size: 30px;
-  font-family: nos;
-}
-p{
-  font-size: 20px;
-  font-family: nos;
-  margin-left:50px;
-  margin-right: 50px;
-}
-</style>
   <head>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>Sally Soto</title>
   </head>
   <body>
   <h1>P1.1 Checkpoint 1</h1>
@@ -40,6 +17,6 @@ p{
    <h2>History of the Shiba Inu</h2>
    <p>Discuss the history of shiba inus, where they first populated, how they act,
     how they grew to be so popular in recent years to be created into cryptocurrency.</p>
-   <a href="index.html">Back</a>
+   <a href="../../index.html">Back</a>
   </body>
   </html>
