--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html>
-<style>
-@font-face {
-  src:url(SharpSansDispNo1-Medium.ttf);
-  font-family: nos;
-}
-body{
-  text-align: center;
-  background-color: #77BFFD;
-  font-family: nos;
-}
-h1{
-  font-size: 40px;
-}
-</style>
   <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <title>Sally Soto</title>
   </head>
   <body>
     <h1>Sally Soto</h1>
-    <h2>Exercise 1: A Little Background</h2>
-      <a href="https://xd.adobe.com/view/cde37e94-f3de-4aa1-9938-a75b33bf4938-98b0/">E1</a>
-    <h2>P1.1 Checkpoint</h2>
-      <a href ="p1-1.html">P1.1</a>
+    <h2>Projects</h2>
+    <ul>
+      <li><a href="p1/1/index.html">P1 Checkpoint 1</a></li>
+      <li><a href="https://xd.adobe.com/view/a5a6c6eb-a108-4531-8cb3-df56d7654c25-f0f5/">P1 Checkpoint 2</a></li>
+    </ul>
+    <h2>Exercises</h2>
+    <ul>
+      <li><a href="https://xd.adobe.com/view/cde37e94-f3de-4aa1-9938-a75b33bf4938-98b0/">Exercise 1: A Little Background</a></li>
+      <li><a href="https://xd.adobe.com/view/4f45d176-4b86-4f13-b344-3a5ff057df1c-1a16/">Exercise 2:Linking in XD</a></li>
+    </ul>
   </body>
 </html>
