--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
       <li><a href="p1/1/index.html">P1 Checkpoint 1</a></li>
       <li><a href="https://xd.adobe.com/view/a5a6c6eb-a108-4531-8cb3-df56d7654c25-f0f5/">P1 Checkpoint 2</a></li>
       <li><a href="https://xd.adobe.com/view/1ed53467-4794-4870-b75a-87a4eea111aa-4b86/">P1 Checkpoint 3</a></li>
+      <li><a href="https://xd.adobe.com/view/ffbd93a6-919c-4a38-a5ee-c699bdc191ac-aaee/">P1 Checkpoint 4</a></li>
     </ul>
     <h2>Exercises</h2>
     <ul>
       <li><a href="https://xd.adobe.com/view/cde37e94-f3de-4aa1-9938-a75b33bf4938-98b0/">Exercise 1: A Little Background</a></li>
       <li><a href="https://xd.adobe.com/view/4f45d176-4b86-4f13-b344-3a5ff057df1c-1a16/">Exercise 2: Linking in XD</a></li>
       <li><a href="https://xd.adobe.com/view/1634dd83-2d8f-4b3c-b2bf-a002bd787908-4367/">Exercise 3: Hover and Animations in XD</a></li>
+      <li><a href="e4/index.html">Exercise 4: Valentine's Day Card</a></li>
+      <li><a href="e5/index.html">Exercise 5: Linking Links </a></li>
     </ul>
   </body>
 </html>
