--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <li><a href="https://xd.adobe.com/view/a5a6c6eb-a108-4531-8cb3-df56d7654c25-f0f5/">P1 Checkpoint 2</a></li>
       <li><a href="https://xd.adobe.com/view/d8e2521d-3f94-4853-a8b7-cab39c309b9c-8db1/">P1 Checkpoint 3</a></li>
       <li><a href="https://xd.adobe.com/view/ffbd93a6-919c-4a38-a5ee-c699bdc191ac-aaee/">P1 Checkpoint 4</a></li>
+      <li><a href="https://xd.adobe.com/view/333aa7d1-6b46-4cb8-94ab-e635657d73c3-6669/">P1 Checkpoint 5: Mobile</a></li>
+      <li><a href="https://xd.adobe.com/view/84c99ea3-bb71-4f1b-b48e-f9bf9a09d299-d19a/">P1 Checkpoint 5: Desktop</a></li>
+      <bk>
+      <li><a href="p2/1/index.html">P2 Checkpoint 1</a></li>   
     </ul>
     <h2>Exercises</h2>
     <ul>
@@ -21,6 +25,7 @@
       <li><a href="https://xd.adobe.com/view/1634dd83-2d8f-4b3c-b2bf-a002bd787908-4367/">Exercise 3: Hover and Animations in XD</a></li>
       <li><a href="e4/index.html">Exercise 4: Valentine's Day Card</a></li>
       <li><a href="e5/index.html">Exercise 5: Linking Links </a></li>
+      <li><a href="https://xd.adobe.com/view/2b9f4769-2e9f-492d-948b-244b92cc84bb-7ecc/">Exercise 6: Form Redesign </a></li>
     </ul>
   </body>
 </html>
