--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <li><a href="https://xd.adobe.com/view/ffbd93a6-919c-4a38-a5ee-c699bdc191ac-aaee/">P1 Checkpoint 4</a></li>
       <li><a href="https://xd.adobe.com/view/333aa7d1-6b46-4cb8-94ab-e635657d73c3-6669/">P1 Checkpoint 5: Mobile</a></li>
       <li><a href="https://xd.adobe.com/view/84c99ea3-bb71-4f1b-b48e-f9bf9a09d299-d19a/">P1 Checkpoint 5: Desktop</a></li>
-      <bk>
-      <li><a href="p2/1/index.html">P2 Checkpoint 1</a></li>   
+      <li><a href="https://xd.adobe.com/view/568c6cd8-c098-44b7-95ef-c7f840c665e3-03df/">P1 FINAL</a></li>
+      <br>
+      <li><a href="p2/1/index.html">P2 Checkpoint 1</a></li>
+      <li><a href="https://xd.adobe.com/view/39299550-5b96-4d36-b817-de87e438ec36-6c7a/">P2 Checkpoint 2</a></li>
     </ul>
     <h2>Exercises</h2>
     <ul>
