--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <br>
       <li><a href="p2/1/index.html">P2 Checkpoint 1</a></li>
       <li><a href="https://xd.adobe.com/view/39299550-5b96-4d36-b817-de87e438ec36-6c7a/">P2 Checkpoint 2</a></li>
+      <li><a href="https://xd.adobe.com/view/180263c9-819e-4ce1-bd67-e70955ef9c06-4d51/">P2 Checkpoint 3</a></li>
     </ul>
     <h2>Exercises</h2>
     <ul>
@@ -28,6 +29,8 @@
       <li><a href="e4/index.html">Exercise 4: Valentine's Day Card</a></li>
       <li><a href="e5/index.html">Exercise 5: Linking Links </a></li>
       <li><a href="https://xd.adobe.com/view/2b9f4769-2e9f-492d-948b-244b92cc84bb-7ecc/">Exercise 6: Form Redesign </a></li>
+      <li><a href="https://xd.adobe.com/view/51e0bc72-81c8-4135-8882-786015fedb13-04b3/">Exercise 7: Reverse Wifreframe </a></li>
+      <li><a href="https://xd.adobe.com/view/3e608266-d4a6-4b15-9f7c-7729834d64c7-6b33/">Exercise 8: Landing Page </a></li>
     </ul>
   </body>
 </html>
