--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="https://xd.adobe.com/view/180263c9-819e-4ce1-bd67-e70955ef9c06-4d51/">P2 Checkpoint 3</a></li>
       <li><a href="https://xd.adobe.com/view/0a292a5e-64fe-40b3-85d5-2ddff0e311fe-5f7a/">P2 Checkpoint 4</a></li>
       <li><a href="https://xd.adobe.com/view/b0077fdd-498c-4e9f-85a9-13b1ad53242b-e554/">P2 Checkpoint 5</a></li>
+      <li><a href="https://xd.adobe.com/view/ae66c2a9-8644-4129-8424-54500b6efe3e-fb35/">P2 Checkpoint 6</a></li>
     </ul>
     <h2>Exercises</h2>
     <ul>
@@ -34,6 +35,7 @@
       <li><a href="https://xd.adobe.com/view/51e0bc72-81c8-4135-8882-786015fedb13-04b3/">Exercise 7: Reverse Wifreframe </a></li>
       <li><a href="https://xd.adobe.com/view/3e608266-d4a6-4b15-9f7c-7729834d64c7-6b33/">Exercise 8: Landing Page </a></li>
       <li><a href="https://xd.adobe.com/view/d21a961a-f042-4547-a3db-405cf7b88054-8749/">Exercise 9: Not So Usable</a></li>
+      <li><a href="https://xd.adobe.com/view/03543c0d-1bfa-4513-8dd8-d16331a91870-5607/">Exercise 10: 5 Usability Heuristics</a></li>
     </ul>
   </body>
 </html>
