--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <li><a href="https://xd.adobe.com/view/0a292a5e-64fe-40b3-85d5-2ddff0e311fe-5f7a/">P2 Checkpoint 4</a></li>
       <li><a href="https://xd.adobe.com/view/b0077fdd-498c-4e9f-85a9-13b1ad53242b-e554/">P2 Checkpoint 5</a></li>
       <li><a href="https://xd.adobe.com/view/ae66c2a9-8644-4129-8424-54500b6efe3e-fb35/">P2 Checkpoint 6</a></li>
-      <li><a href="https://xd.adobe.com/view/9c884c90-174f-48f3-9bdb-3ec7c46ced9f-c9db/">P2 Checkpoint </a></li>
+      <li><a href="https://xd.adobe.com/view/9c884c90-174f-48f3-9bdb-3ec7c46ced9f-c9db/">P2 Checkpoint 7</a></li>
+      <li><a href="https://xd.adobe.com/view/7d010589-e899-4ed2-958c-15d4945a97fb-2852/">P2 Checkpoint FINAL </a></li>
     </ul>
     <h2>Exercises</h2>
     <ul>
