--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <li><a href="https://xd.adobe.com/view/3e608266-d4a6-4b15-9f7c-7729834d64c7-6b33/">Exercise 8: Landing Page </a></li>
       <li><a href="https://xd.adobe.com/view/d21a961a-f042-4547-a3db-405cf7b88054-8749/">Exercise 9: Not So Usable</a></li>
       <li><a href="https://xd.adobe.com/view/03543c0d-1bfa-4513-8dd8-d16331a91870-5607/">Exercise 10: 5 Usability Heuristics</a></li>
+      <li><a href="https://docs.google.com/presentation/d/1ai_-vAPqpQSsJEwFMgzQUay98uHV7BvxbMPG2rP4kYI/edit?usp=sharing">Exercise 11: Design a Hat</a></li>
     </ul>
   </body>
 </html>
